istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "istio-ingressgateway.istio-system.svc.cluster.local"
  gateways:
  - mygateway
  - mygateway-80
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9001
        host: example-grpc-auth-service
